added middleware, login auth and center content

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NEXTAUTH_URL=http//localhost:3000
+NEXTAUTH_URL=http://localhost:3000
 NEXT_PUBLIC_CLIENT_SECRET=0ea322e7f9f24a6f98a6f2de4136fe6d
 NEXT_PUBLIC_CLIENT_ID=2835bcfa4e2c4f899f2d322f0e626795
 JWT_SECRET=enekosupersecretvalue
